--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         height: 100% !important;
       }
     </style>
+    <script
+    src="https://cdn.jsdelivr.net/npm/@voxeet/voxeet-web-sdk/dist/voxeet-sdk.js"
+    type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
